<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_servers"
        android:icon="@drawable/ic_server"
        android:title="@string/tab_servers" />
    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_search"
        android:title="@string/tab_browse" />
    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/tab_downloads" />
    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/ic_logs"
        android:title="@string/tab_logs" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>